[package]
name = "upacklib"
version = "0.1.0"
edition = "2024"
[lib]
name = "upacklib"
path = "src/main.rs"
[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
lz4_flex = { version = "0.11", default-features = false }
